add maintexts to podcast list

--- a/language/es.json
+++ b/language/es.json
@@ -1,4 +1,8 @@
 {
   "mainSeoTitle": "Reproductor de podcast",
-  "mainSeoDescription": "Escucha los 100 Podcast más populares de itunes. Escucha los Podcast de tus programas favoritos y descubre nuevos Podcasts."
+  "mainSeoDescription": "Escucha los 100 Podcast más populares de itunes. Escucha los Podcast de tus programas favoritos y descubre nuevos Podcasts.",
+  "episodes": "Episodios",
+  "title": "Título",
+  "date": "Fecha",
+  "duration": "Duración"
 }
