--- a/language/es.json
+++ b/language/es.json
@@ -14,5 +14,10 @@
   "generalError": "Ha ocurrido un error",
   "loadingError": "Ha ocurrido un error al cargar los datos",
   "tryAgain": "Vuelve a intentarlo",
-  "back": "Volver"
+  "back": "Volver",
+  "custom404_title": "Error 404 - Página no encontrada",
+  "custom404_short_description": "404 Descripción corta de la página de Error 404 - Página no encontrada",
+  "custom404_page_title": "Oooops...",
+  "custom404_subtitle": "La página que buscas no existe",
+  "go_homepage": "Ir a la página de inicio"
 }
