--- a/language/es.json
+++ b/language/es.json
@@ -19,5 +19,7 @@
   "custom404_short_description": "404 Descripción corta de la página de Error 404 - Página no encontrada",
   "custom404_page_title": "Oooops...",
   "custom404_subtitle": "La página que buscas no existe",
-  "go_homepage": "Ir a la página de inicio"
+  "go_homepage": "Ir a la página de inicio",
+  "podcast_not_found": "Podcast no encontrado",
+  "podcast_not_found_description": "El podcast que buscas no existe o ha sido eliminado"
 }
