--- a/language/es.json
+++ b/language/es.json
@@ -23,5 +23,6 @@
   "podcast_not_found": "Podcast no encontrado",
   "podcast_not_found_description": "El podcast que buscas no existe o ha sido eliminado",
   "back_to_podcasts_list": "Volver a la lista de podcasts",
-  "back_to_episodes_list": "Volver a la lista de episodios"
+  "back_to_episodes_list": "Volver a la lista de episodios",
+  "home": "Inicio"
 }
